# gotutorials/goBaseProj/handler/user/PutUser.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"database/sql"
+	"net/http"
 
 	"goBaseProj/handler/user/service"
 	"goBaseProj/model"
@@ -14,7 +15,7 @@ import (
 // @Summary      유저 정보 수정
 // @Description  유저 정보를 수정합니다.
 // @Produce      json
-// @Param 		 Param body model.User true "유저 정보 JSON Format"
+// @Param 		 Param body model.UserPutReq true "유저 정보 JSON Format"
 // @Success      200  {array}  model.UserResult
 // @Router       /user [put]
 func PutUser(c *gin.Context) {
@@ -35,9 +36,14 @@ func PutUser(c *gin.Context) {
 	// userService 호출
 	userService := service.UserService{db}
 
-	resp := model.UserResult{}
-	resp = userService.PutUser(resBody)
+	putRes := model.UserResult{}
+	putRes = userService.PutUser(resBody)
 
-	c.Header("Content-Type", "application/json")
-	c.JSON(resp.Status, resp)
+	if putRes.Status == http.StatusOK {
+		res := userService.GetUser(putRes.UserData.UserID)
+		c.Header("Content-Type", "application/json")
+		c.JSON(res.Status, res)
+	} else {
+		c.JSON(putRes.Status, putRes)
+	}
 }
